Modify the lazy content-provider caching to work reliably